<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- Event marking and showing UI -->
	<string name="dateSliderTitle">Selected date</string>
	<string name="ok">Ok</string>
    <string name="hello">Hello World, BabyScheduleMain!</string>
    <string name="app_name">BabySchedule</string>
    <string name="single_action">BabySchedule: single event list</string>
    <string name="add_activity">Add event</string>
    <string name="edit_event">Edit event</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="events_list">Show all events</string>
    <string name="show_events">Show all events of this type</string>
    <string name="add_event_prompt">Choose an event to add</string>
    <string name="show_stats">Show statistics</string>
    <string name="go_to_sleep">Go to sleep</string>
    <string name="go_to_nap">Go for a nap</string>
    <string name="milk_left">Nurse left</string>
   	<string name="milk_right">Nurse right</string>
    <string name="woke_up">Woke up</string>
    <string name="delete">Delete event</string>
    <string name="mark">Mark now</string>
    <string name="mark_nightsleep">Mark night sleep now</string>
    <string name="mark_nap">Mark nap now</string>
    <string name="days">d</string>
    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="seconds">s</string>
    <string name="milk_amount_instruction">How much milk was given (ml)?</string>
    <string name="nursing_instruction">How many minutes nursed?</string>
    <string name="forgot_milk_amount">Please enter how much milk was given.</string>
    <string name="forgot_nursing_time">Please enter how long the nursing lasted.</string>
    
    <!--  Event editor -->
    <string name="editor_event">Event:</string>
    <string name="editor_time">Time:</string>
    <string name="add_wakeup">Edit wake up time</string>
    <string name="no_wakeup_time">No time set</string>
    <string name="invalid_wakeup">Wake up time cannot be earlier than go to sleep time</string>
    
    <!--  Main tabs -->
    <string name="tab_mark_events">Mark events</string>
    <string name="tab_show_events">Show events</string>
    
    <!--  Statistics -->
    <string name="avg_night_sleep">Average length of night sleep:</string>
    <string name="avg_nap">Average length of nap:</string>
    <string name="sleep_per_day">How many hours of sleep per day</string>
    <string name="milk_per_day">Milk given per day (ml)</string>
    <string name="no_data">No data</string>
    
    <!-- Settings screen -->
    <string name="choose_baby">Choose baby</string>
    <string name="settings">Settings</string>
    <string name="babynames">Baby names</string>
    <string name="choose_baby_summary">Choose for which baby to mark events for</string>
    <string name="add_baby">Add new baby</string>
    <string name="add_baby_summary">Add a new baby to the application</string>
    <string name="add_baby_instruction">Give the name of the new baby</string>
    <string name="manage_babies">Manage babies</string>
    <string name="manage_babies_summary">Rename and delete babies</string>
    <string name="delete_baby">Remove baby</string>
    <string name="edit_baby">Rename baby</string>
    <string name="edit_baby_instruction">Give the new name of the baby</string>
    <string name="baby_exists">Unable to add, baby with the same name already exists!</string>
    <string name="no_babies">No babies exist, give baby name to start using application.</string>
    
    <!--  Mark activites list -->
    <string name="last_occurred">Last occurred at: </string>
    <string name="ago">ago</string>
    <string name="no_events_occurred">No events occurred</string>
    <string name="baby_has_been_awake"> has now been awake for</string>
    <string name="baby_is_awake_no_prev"> is now awake, no previous sleep events marked.</string>
    <string name="baby_has_been_sleeping"> has now been sleeping for</string>
    <string name="baby_is_sleeping_no_prev"> is now sleeping, no previous awake events marked.</string>
    
    <!--  Milk activity -->
    <string name="give_milk">Give milk</string>
    <string name="how_much">How much milk was given?</string>
    <string name="ml">ml</string>
    <string name="milk">Milk</string>
    <string name="milk_bottle">Milk bottle</string>
    <string name="mark_milk_amount">Mark amount of milk given</string>
    
    <!--  Activity listing -->
    <string name="list_time"><b>Time:</b></string>
    <string name="list_date"><b>Date:</b></string>
    <string name="amount"><b>Amount:</b></string>
    <string name="duration"><b>Duration:</b></string>
    
    <!-- Nursing activity -->
    <string name="nursing">Nursing</string>    
    <string name="nursing_left">Now nursing left breast</string>
    <string name="from_left">From left breast</string>
    <string name="from_right">From right breast</string>
    <string name="left">Left: </string>
    <string name="right">Right: </string>
    <string name="nursing_right">Now nursing right breast</string> 
    <string name="switch_breast">Switch breast</string>
    <string name="finish_nursing">Finish nursing</string>
    <string name="start_nursing_left">Start nursing left breast</string>
    <string name="start_nursing_right">Start nursing right breast</string>
    
    <!--  Activity names -->
    <string name="eat_activity">Eat</string>
   	<string name="go_to_sleep_activity">Go to sleep</string>
   	<string name="go_to_nap_activity">Go for a nap</string>
   	<string name="woke_up_activity">Woke up</string>
   	<string name="bath_activity">Bath</string>
   	<string name="milk_activity">Milk</string>
   	<string name="nurse_left_activity">Nurse left</string>
   	<string name="nurse_right_activity">Nurse right</string>
   	<string name="woke_up_during_night_activity">Woke up during night</string>
   	<string name="changed_diaper_activity">Changed diaper</string>
   	<string name="made_poop_activity">Made poop</string>    
   	<string name="nursing_activity">Nursing</string>	
    
   	<!--  Statistics view -->
   	<string name="naptimes">Nap times (hours)</string>
   	<string name="sleeptimes">Sleep times (hours)</string>
   	<string name="allsleeptimes">Nap and sleep times combined (hours)</string>
   	<string name="napcbstring">Naps</string>
   	<string name="sleepcbstring">Nights</string>
   	<string name="allsleepcbstring">Combined</string>
   	<string name="lefttimes">Nursing left breast times (minutes)</string>
   	<string name="righttimes">Nursing right breast times (minutes)</string>
   	<string name="bothtimes">Left and right breast combined (minutes)</string>
   	<string name="leftcbstring">Left</string>
   	<string name="rightcbstring">Right</string>
   	<string name="bothcbstring">Both</string>
   	<string name="nodata">No data</string>
   	
   	<!-- Statistic array items -->
   	<string name="milk_stats_str">Milk statistics</string>
   	<string name="sleep_stats_str">Sleep statistics</string>
   	<string name="nursing_stats_str">Nursing statistics</string>
    <string name="sleep_range_stats_str">Sleep times statistics</string>
   	
   	<!--  Statistics arrays -->
   	<string-array name="statistics_types">
   	    <item name="sleep_stats">@string/sleep_stats_str</item>
   	    <item name="milk_stats">@string/milk_stats_str</item>   	    
   	    <item name="nursing_stats">@string/nursing_stats_str</item>
        <item name="sleep_range_states">@string/sleep_range_stats_str</item>
   	</string-array>
   	
    <!-- Activity arrays -->
    <string-array name="activity_names">
    	<!-- <item name="eat">@string/eat_activity</item> -->
    	<item name="go_to_sleep">@string/go_to_sleep_activity</item>
    	<item name="go_to_nap">@string/go_to_nap_activity</item>
    	<item name="woke_up">@string/woke_up_activity</item>
    	<!-- <item name="bath">@string/bath_activity</item> -->
    	<item name="milk">@string/milk_activity</item>
    	<item name="nurse_left">@string/nurse_left_activity</item>
    	<item name="nurse_right">@string/nurse_right_activity</item>
    	<!-- <item name="woke_up_during_night">@string/woke_up_during_night_activity</item>
    	<item name="changed_diaper">@string/changed_diaper_activity</item>
    	<item name="made_poop">@string/made_poop_activity</item> -->    	
   	</string-array>
   	<string-array name="sleep_activities">
    	<item name="woke_up">@string/woke_up_activity</item>
    	<item name="milk">@string/milk_activity</item>
    	<item name="nursing">@string/nursing_activity</item>
    	<!-- <item name="woke_up_during_night">@string/woke_up_during_night_activity</item> -->    	
   	</string-array>
   	<string-array name="awake_activities">
   		<!-- <item name="eat">@string/eat_activity</item> -->
    	<item name="go_to_sleep">@string/go_to_sleep_activity</item>
    	<!-- <item name="bath">@string/bath_activity</item> -->
    	<item name="milk">@string/milk_activity</item>
    	<item name="nursing">@string/nursing_activity</item>
    	<!-- <item name="changed_diaper">@string/changed_diaper_activity</item>
    	<item name="made_poop">@string/made_poop_activity</item>    	 -->
   	</string-array>
</resources>