<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/barmainlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <LinearLayout
        android:id="@+id/nursingSelectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/leftSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/leftcbstring" />

        <CheckBox
            android:id="@+id/rightSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/rightcbstring" />
        
        <CheckBox
            android:id="@+id/bothSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/bothcbstring" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/nursingBarGraphLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:baselineAligned="false" >        
		
        <LinearLayout 
            android:id="@+id/leftLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33">            
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/rightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33">            
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/bothLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33">            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>